<resources>
    <string name="app_name">Crypto</string>
    <string name="action_settings">Settings</string>
    <string name="unknown_error">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="coins">Coins</string>
    <string name="select_coins">Select coins</string>
    <string name="supply">Supply</string>
    <string name="circulating">Circulating</string>
    <string name="one_month">1m</string>
    <string name="one_week">1w</string>
    <string name="one_day">24h</string>
    <string name="change">Change</string>
    <string name="percentage_value">%1$s %%</string>
    <string name="growth_30_days">Growth in the last 30 days</string>
    <string name="title_show_case">Welcome to Crypto</string>
    <string name="show_case">Choose your favorite coin</string>
    <string name="check_your_connection">Please check your connectivity</string>
    <string name="bad_request">Your client has an issue</string>
    <string name="server_error">The server encountered an internal error</string>
</resources>